# rustybovich

./: Cargo.toml  README.md  rustfmt.toml
assets/: en-infinite-sorted.json  en-infinite.json  en-nyt-2-sorted.json  en-nyt-sorted.json  en-nyt.json  ranked_dump.txt  ru-sorted.json  ru.json
benches/: benchmark.rs  guesser.rs  words.rs
src/: game.rs  lib.rs  main.rs  words.rs
src/guesser/: bfs_bruteforce_guesser.rs  bfs_guesser.rs  bfs_smart.rs  mod.rs  naive_guesser.rs
src/guesser_family/: bfs_guesser.rs  bfs_guesser_cached_patterns.rs  bfs_guesser_full_cache.rs  mod.rs
src/words/: mod.rs  words_1.rs  words_2.rs
src/words_family/: mod.rs  words_1.rs
tmp/: answers_dump.txt  ranked_dump.txt
