[package]
name = "rustybovich"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anstream = "0.6.4"
clap = { version = "4.4.6", features = ["derive"] }
colored = "2.0.4"
itertools = "0.11.0"
owo-colors = "3.5.0"
priority-queue = "1.3.2"
rayon = "1.8.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_with = "3.4.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "words"
harness = false

[[bench]]
name = "guesser"
harness = false
